# easypassword

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.nix  Cargo.toml  LICENSE  README.md  default.nix  easypassword_0.2.2.bb  failure.txt  result  shell.nix
12dicts/: ReadMe.html  alllists.html
12dicts/International/: 3of6all.txt  3of6game.txt  5d+2a.txt
12dicts/Special/: 2of5core.txt  6phrase.txt  neol2016.txt
example_word_lists/: LICENSE_for_word_lists.md
src/: easypassword-cli.rs  easypassword.rs  main.rs  main.rs.bak  password.rs
