[package]
name = "easypassword"
version = "0.1.5"
authors = ["functional-tim <crazymind102@googlemail.com>"]
edition = "2018"
description = "A program to create passwords like in xkcd.com/936.\nThe file has to have one word per line.\nOne seperator should be a special character.\nThe other seperator should be a number."
readme = "README.md"
homepage = "https://github.com/functional-tim/easypassword"
repository = "https://github.com/functional-tim/easypassword"
license = "MIT OR Apache-2.0"
keywords = ["password", "security"]
categories = ["command-line-utilities"]

[dependencies]
heck = "^0.3"
rand = "^0.8"
structopt = "^0.3"
