[package]
name = "easypassword"
version = "0.2.1"
authors = ["functional-tim <crazymind102@googlemail.com>"]
edition = "2018"
description = "A program to create passwords like in xkcd.com/936.\nThe file has to have one word per line.\nOne seperator should be a special character.\nThe other seperator should be a number."
readme = "README.md"
homepage = "https://github.com/functional-tim/easypassword"
repository = "https://github.com/functional-tim/easypassword"
license = "MIT OR Apache-2.0"
keywords = ["password", "security"]
categories = ["command-line-utilities"]

[dependencies]
eframe = "^0.19"
egui = "^0.19"
exitcode = "^1.1"
heck = "^0.4"
imgui = "^0.8.2"
rand = "^0.8"
structopt = "^0.3"

[[bin]]
name = "easypassword-cli"
path = "src/easypassword-cli.rs"

[[bin]]
name = "easypassword"
path = "src/easypassword.rs"
