[package]
name = "easypassword"
version = "0.2.2"
authors = ["functional-tim <tim.gravert@web.de>"]
edition = "2018"
description = "A program to create passwords like in xkcd.com/936.\nThe file has to have one word per line.\nOne seperator should be a special character.\nThe other seperator should be a number."
readme = "README.md"
homepage = "https://github.com/functional-tim/easypassword"
repository = "https://github.com/functional-tim/easypassword"
license = "MIT OR Apache-2.0"
keywords = ["password", "security"]
categories = ["command-line-utilities"]

[dependencies]
exitcode = "^1.1"
heck = "^0.5"
rand = "^0.8"
structopt = "^0.3"
